fix: eliminar config.js y corregir rutas

--- a/pedidos.html
+++ b/pedidos.html
@@ -143,7 +143,6 @@
     </div>
   </div>
 
-  <script src="config.js"></script>
-  <script src="javascript/pedidos.js"></script>
+  <script src="javascript/pedido.js"></script>
 </body>
 </html>
