--- a/index.html
+++ b/index.html
@@ -390,8 +390,7 @@
       <a href="pedidos.html" class="btn-pedido">Continuar Pedido</a>
     </div>
   </div>
-  
-  <script src="config.js"></script>
-  <script src="./javascript/main.js"></script>
+
+  <script src="javascript/main.js"></script>
 </body>
 </html>
